# sudoku-rs

./: Cargo.toml  README.md
benches/: solver.rs
src/: lib.rs  main.rs
