[package]
name = "sudoku-rs"
version = "0.1.0"
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
rand = "0.6"
structopt = "0.2"
rayon = "1.0"

[dev-dependencies]
proptest = "0.9.0"
rand_xorshift = "0.1.1"
criterion = "0.2"

[[bench]]
name = "solver"
harness = false
